CMAKE_MINIMUM_REQUIRED( VERSION 3.0 )

PROJECT( "RPIOPWM" )
	
IF( CMAKE_SYSTEM_NAME MATCHES "Linux" )

	SET	(	SOURCES
			pwm.h
			pwm.c
		)
	ADD_LIBRARY( ${PROJECT_NAME} STATIC ${SOURCES} )
	
	INSTALL(TARGETS ${PROJECT_NAME} EXPORT PihaInstallTargets
		LIBRARY DESTINATION lib
		ARCHIVE DESTINATION lib
		RUNTIME DESTINATION bin )
	#SET( ConfigPackageLocation lib/cmake/${PROJECT_NAME} )
	#INSTALL(EXPORT ${PROJECT_NAME}Targets 
	#	FILE ${PROJECT_NAME}Targets.cmake
	#	NAMESPACE ${TARGET_NAMESPACE}
	#	DESTINATION ${ConfigPackageLocation} )
ELSE()
	MESSAGE("${PROJECT_NAME} is only Linux only")
ENDIF()


